--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@
 body{
   font-family: var(--main-font);
   font-size: var(--body-font-size);
+  background-color: #e5e5e5;
 }
 
 /* Navigation */
@@ -44,6 +45,22 @@ body{
 
 .nav__item a:hover{
   color: var(--link-hover-color);
+}
+
+/* Avatar */
+.avatar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+}
+
+.avatar__image {
+ width: 100px;
+ height: 100px;
+ object-fit: cover;
+ border-radius: 50%;
 }
 
 
