--- a/public/styles.css
+++ b/public/styles.css
@@ -24,7 +24,7 @@ body{
   background-color: #e5e5e5;
 }
 
-/* Navigation */
+/* == Navigation */
 .nav__list{
   display: flex;
   flex-direction: row;
@@ -47,13 +47,16 @@ body{
   color: var(--link-hover-color);
 }
 
+
+/* == Header */
 /* Avatar */
 .avatar{
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 200px;
+  margin-top: 80px;
+  margin-bottom: var(--margin-medium);
 }
 
 .avatar__image {
@@ -63,6 +66,37 @@ body{
  border-radius: 50%;
 }
 
+/* Intro */
+.intro{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: gray;
+}
 
+.intro__title{
+  font-size: var(--h1-font-size);
+  width: 400px;
+  text-align: center;
+}
+
+.intro__decription{
+  font-size: var(--body-font-size);
+}
+
+/* Action */
+.intro__action{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin: var(--margin-large);
+}
+
+.intro__button{
+  width: 140px;
+  height: 50px;
+}
 
 
