--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,9 @@
 :root{
-  --main-font: Inter, sans-serif;
-  --h1-font-size: 36px;
-  --h2-font-size: 30px;
-  --h3-font-size: 24px;
-  --body-font-size: 16px;
+  --fontFamily-main: Inter, sans-serif;
+  --fontSize-heading1: 36px;
+  --fontSize-heading2: 30px;
+  --fontSize-heading3: 24px;
+  --fontSize-body: 16px;
 
   --padding-extra-large: 64px;
   --padding-large: 32px;
@@ -17,6 +17,9 @@
   --margin-small: 8px;
   --margin-extreme-small: 4px;
 
+  /* Color list */
+
+  /* Components */
   --link-hover-color: gray;
   --link-color: black;
   
@@ -29,7 +32,7 @@
   --button-primary-hover-color: #5f5f5f;
 
   --button-icon-color: #ffff;
-  --button-icon-hover-color: #5f5f5f;
+  --button-icon-hover-color: #E2E8F0;
   --button-icon-border-color: #e2e8f0;
 
   --radius-sm: 4px;
@@ -113,8 +116,28 @@ small {
 }
 
 body{
-  font-family: var(--main-font);
+  font-family: var(--fontFamily-main);
   line-height: 1.25;
+}
+
+/* ====== components ====== */
+
+/* Button*/
+.icon-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--button-icon-color);
+  width: 40px;
+  height: 40px;
+  border-radius: var(--radius-md);
+  border-color: var(--button-icon-border-color);
+  border-style: solid;
+}
+
+.icon-button:hover{
+  background-color: var(--button-icon-hover-color);
 }
 
 
@@ -124,6 +147,17 @@ img { border: 10px solid red; }
 img[alt]:not([alt=""]) { border:none; }
 
 /* == Navigation */
+.nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: var(--padding-large);
+  padding-bottom: var(--padding-large);
+  margin-left: 100px;
+  margin-right: 100px
+}
+
 .nav__list{
   display: flex;
   flex-direction: row;
@@ -132,8 +166,6 @@ img[alt]:not([alt=""]) { border:none; }
   
   padding-top: var(--padding-large); 
   padding-bottom: var(--padding-large); 
-  margin-left: 100px;
-  margin-right: 100px;
 }
 
 .nav__item{
@@ -143,7 +175,7 @@ img[alt]:not([alt=""]) { border:none; }
 .nav__link{
   color: var(--link-color);
   text-decoration: none;
-  font-size: var(--body-font-size);
+  font-size: var(--fontSize-body);
 }
 
 .nav__item a:hover{
@@ -167,10 +199,10 @@ img[alt]:not([alt=""]) { border:none; }
 }
 
 .intro__image {
- width: 100px;
- height: 100px;
- object-fit: cover;
- border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .intro__title{
@@ -200,7 +232,7 @@ img[alt]:not([alt=""]) { border:none; }
   border-radius: 30px;
 
   color: var(--font-button-color);
-  font-size: var(--body-font-size);
+  font-size: var(--fontSize-body);
 
   transition-duration: 0.4s;
   cursor: pointer;
@@ -211,7 +243,7 @@ img[alt]:not([alt=""]) { border:none; }
 }
 
 .intro__link{
-  font-size: var(--body-font-size);
+  font-size: var(--fontSize-body);
   color: var(--link-color);
   text-decoration: none;
 }
@@ -352,6 +384,11 @@ img[alt]:not([alt=""]) { border:none; }
   border: 4px solid gray;
 
   transform: translate(-50%, -50%);
+  transition: transform 0.3s;
+}
+
+.timeline__item:hover::after {
+  transform: translate(-50%, -50%) scale(1.5);
 }
 
 .timeline__company, .timeline__duration{
@@ -371,9 +408,9 @@ img[alt]:not([alt=""]) { border:none; }
   padding-top: var(--padding-extreme-small);
 }
 
-/* ====== Portfolio ==========*/
-/* Portfolio section */
-.portfolio{
+/* ====== Recent work ==========*/
+/* Recent work section */
+.recent-work{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -385,12 +422,12 @@ img[alt]:not([alt=""]) { border:none; }
   margin-right: 100px;
 }
 
-.portfolio__title{
+.recent-work__title{
   text-align: center;
 }
 
-/* Portfolio carousel */
-.portfolio__carousel{
+/* Recent work carousel */
+.recent-work__carousel{
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -399,20 +436,7 @@ img[alt]:not([alt=""]) { border:none; }
   padding-top: var(--margin-extra-large);
 }
 
-.portfolio__button{
-  display: flex;
-  align-items: center;
-  justify-content: center; 
-  
-  background-color: var(--button-icon-color);
-  width: 40px;
-  height: 40px;
-  border-style: solid;
-  border-radius: var(--radius-md);
-  border-color: var(--button-icon-border-color);
-}
-
-.portfolio__list{
+.recent-work__list{
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -427,27 +451,32 @@ img[alt]:not([alt=""]) { border:none; }
   justify-content: flex-start;
 
   border-radius: var(--radius-sm);
-  width: 240px;
-  height: 260px;
+  width: 376px;
+  height: 400px;
 
   box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.1), 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+  transition-duration: 0.3s;
+}
+
+.card:hover{
+  transform: scale(1.1);
 }
 
 .card__img {
-  width: 240px;
-  border-radius: var(--radius-sm);
+  width: 376px;
+  border-radius: var(--radius-sm) var(--radius-sm) 0px 0px;
 }
 
 .card__title {
   padding-top: var(--padding-medium);
-  padding-left: var(--padding-small);
-  padding-right: var(--padding-small);
+  padding-left: var(--padding-medium);
+  padding-right: var(--padding-medium);
 }
 
 .card__intro {
   padding-top: var(--padding-small);
-  padding-left: var(--padding-small);
-  padding-right: var(--padding-small);
+  padding-left: var(--padding-medium);
+  padding-right: var(--padding-medium);
   padding-bottom: var(--padding-extreme-small);
 }
 
@@ -476,11 +505,27 @@ footer > h2{
   column-gap: var(--margin-medium);
 }
 
-.contact__button{
-  background-color: var(--button-icon-color);
-  width: 40px;
-  height: 40px;
-  border-radius: var(--radius-md);
-  border-color: var(--button-icon-border-color);
-  border-style: solid;
+
+/* ====== Projects  ==========*/
+/* Project list */
+.project__list{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: var(--margin-large);
+  row-gap: var(--margin-extra-large);
+
+  padding-top: var(--margin-extra-large);
+  margin-left: 100px;
+  margin-right: 100px;
 }
+
+.project__title{
+  text-align: left;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+
